<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/pac_proxy_list"
        layout="@layout/standard_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_new_pac_proxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_new"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"/>

</RelativeLayout>